# cmakeQuickStart

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HelloWorld  HelloWorld.cpp  HelloWorld.h  HelloWorld.h.in  Makefile  README.md  cmake_install.cmake  install_manifest.txt
MathsFunctions/: CMakeLists.txt  Makefile  MathsFunctions.h  cmake_install.cmake  myadd.cpp
test/: HelloWorldTests.cpp
